# juntando-os-dados-e-adicionando-o-streamlit-hindus

./: README.md  app.py  pyproject.toml
jeferson/: jeferson import requests .py
joao_paulo/: joao_paulo_vivareal.py
joao_vitor/: imoveisvivarealjoaovictor.py
