[tool.poetry]
name = "juntando-os-dados-hindus"
version = "0.1.0"
description = ""
authors = ["joao951951 <joao31554@gmail.com>"]
readme = "README.md"
packages = [{include = "juntando_os_dados_hindus"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
pandas = "^2.0.1"
beautifulsoup4 = "^4.12.2"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
